--- a/AnotherWorld.vcxproj
+++ b/AnotherWorld.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="AnotherWorld.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
