--- a/AnotherWorld.vcxproj.filters
+++ b/AnotherWorld.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="another-world\virtual-machine.hpp">
       <Filter>another-world</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnotherWorld.cpp">
